Our_team: Troquei posicao de fotos e nome de cada colaborador.

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ Author URL:
 					<img src="images/team1.jpg" class="img-fluid img-thumbnail" alt="">
 					<div class="caption">
 						<div class="team-text">
-							<h4>Carol</h4>
+							<h4>Davi</h4>
 						</div>
 						<ul>
 							<li>
@@ -462,7 +462,7 @@ Author URL:
 					<img src="images/team2.jpg" class="img-fluid img-thumbnail" alt="">
 					<div class="caption">
 						<div class="team-text">
-							<h4>Ellas</h4>
+							<h4>Carol</h4>
 						</div>
 						<ul>
 							<li>
@@ -514,7 +514,7 @@ Author URL:
 					<img src="images/team3.jpg" class="img-fluid img-thumbnail" alt="">
 					<div class="caption">
 						<div class="team-text">
-							<h4>Mack</h4>
+							<h4>Sonia</h4>
 						</div>
 						<ul>
 							<li>
@@ -539,7 +539,7 @@ Author URL:
 					<img src="images/team5.jpg" class="img-fluid img-thumbnail" alt="">
 					<div class="caption">
 						<div class="team-text">
-							<h4>Sonia</h4>
+							<h4>João</h4>
 						</div>
 						<ul>
 							<li>
@@ -564,7 +564,7 @@ Author URL:
 					<img src="images/team6.jpg" class="img-fluid img-thumbnail" alt="">
 					<div class="caption">
 						<div class="team-text">
-							<h4>Rochy</h4>
+							<h4>Monica</h4>
 						</div>
 						<ul>
 							<li>
