contat_us: Alterando formulario

--- a/index.html
+++ b/index.html
@@ -707,19 +707,19 @@ Author URL:
 					<div class="l-agile">
 						<form action="#" method="post">
 							<div class="form-group">
-								<input type="text" name="name" placeholder="Your name" class="form-control" required="">
+								<input type="text" name="name" placeholder="Seu nome" class="form-control" required="">
 							</div>
 							<div class="form-group">
-								<input type="email" name="email" placeholder="Your email" class="form-control" required="">
+								<input type="email" name="email" placeholder="Seu e-mail" class="form-control" required="">
 							</div>
 							<div class="form-group">
-								<input type="text" name="subject" placeholder="Your subject" class="form-control" required="">
+								<input type="text" name="subject" placeholder="Assunto" class="form-control" required="">
 							</div>
 							<div class="form-group">
-								<input type="text" name="phone number" placeholder="Phone number" class="form-control" required="">
+								<input type="text" name="phone number" placeholder="telefone" class="form-control" required="">
 							</div>
 							<div class="form-group">
-								<textarea name="message" placeholder="Your message" class="form-control" required=""></textarea>
+								<textarea name="message" placeholder="Sua mensagem" class="form-control" required=""></textarea>
 							</div>
 							<input type="submit" value="Send">
 						</form>
@@ -729,12 +729,12 @@ Author URL:
 					<div class="l-agile ">
 						<div class="address">
 							<h4 class="text-white">
-								<i class="fa fa-map-marker" aria-hidden="true"></i>Location</h4>
-							<p>345 Setwant Metropolitan, Italy.</p>
+								<i class="fa fa-map-marker" aria-hidden="true"></i>Localização</h4>
+							<p>Rodovia Varginha-Elói Mendes - Aeroporto, Varginha - MG, 37110-000 - Brasil.</p>
 						</div>
 						<div class="phone my-4">
 							<h4 class="text-white">
-								<i class="fa fa-phone" aria-hidden="true"></i>Phone</h4>
+								<i class="fa fa-phone" aria-hidden="true"></i>Telefone</h4>
 							<p>+1(401) 1234 567.</p>
 						</div>
 						<div class="email">
