our_team: Troquei posicao das imagens e nome dos colaboradores. contact_us: Atualizacao do form

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ Author URL:
 	<!-- team -->
 	<div class="team py-5" id="team">
 		<div class="container py-xl-5 py-lg-3">
-			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">Our Team
+			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">Sobre nós
 				<span></span>
 			</h3>
 			<div class="row team-bottom">
@@ -699,7 +699,7 @@ Author URL:
 	<!-- contact -->
 	<div class="contact py-5" id="contact">
 		<div class="container py-xl-5 py-lg-3">
-			<h3 class="title text-capitalize text-white text-center pb-3 mb-sm-5 mb-4">contact us
+			<h3 class="title text-capitalize text-white text-center pb-3 mb-sm-5 mb-4">Fale conosco
 				<span></span>
 			</h3>
 			<div class="d-flex">
@@ -721,7 +721,7 @@ Author URL:
 							<div class="form-group">
 								<textarea name="message" placeholder="Sua mensagem" class="form-control" required=""></textarea>
 							</div>
-							<input type="submit" value="Send">
+							<input type="submit" value="Enviar">
 						</form>
 					</div>
 				</div>
@@ -730,12 +730,12 @@ Author URL:
 						<div class="address">
 							<h4 class="text-white">
 								<i class="fa fa-map-marker" aria-hidden="true"></i>Localização</h4>
-							<p>Rodovia Varginha-Elói Mendes - Aeroporto, Varginha - MG, 37110-000 - Brasil.</p>
+							<p>Avenida Alzira Barra Gazzola, 650 Bairro Aeroporto, Varginha - MG, Brasil.</p>
 						</div>
 						<div class="phone my-4">
 							<h4 class="text-white">
 								<i class="fa fa-phone" aria-hidden="true"></i>Telefone</h4>
-							<p>+1(401) 1234 567.</p>
+							<p>(35) 3219-5000.</p>
 						</div>
 						<div class="email">
 							<h4 class="text-white">
