nosso time: alteracao de dados

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ Author URL:
 	<!-- team -->
 	<div class="team py-5" id="team">
 		<div class="container py-xl-5 py-lg-3">
-			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">Sobre nós
+			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">Nosso time
 				<span></span>
 			</h3>
 			<div class="row team-bottom">
