--- a/index.html
+++ b/index.html
@@ -716,12 +716,12 @@ Author URL:
 								<input type="text" name="subject" placeholder="Assunto" class="form-control" required="">
 							</div>
 							<div class="form-group">
-								<input type="text" name="phone number" placeholder="telefone" class="form-control" required="">
+								<input type="text" name="phone number" placeholder="Telefone" class="form-control" required="">
 							</div>
 							<div class="form-group">
 								<textarea name="message" placeholder="Sua mensagem" class="form-control" required=""></textarea>
 							</div>
-							<input type="submit" value="Enviar">
+							<input type="submit" value="Enviar Mensagem">
 						</form>
 					</div>
 				</div>
