Alteracao no Menu Sand.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Author URL:
 									<a href="#services" class="scroll">Services</a>
 								</li>
 								<li>
-									<a href="#team" class="scroll">Team</a>
+									<a href="#team" class="scroll">Nosso Time</a>
 								</li>
 								<li>
 									<a href="#gallery" class="scroll">Gallery</a>
@@ -85,7 +85,7 @@ Author URL:
 									<a href="#testi" class="scroll">Testimonials</a>
 								</li>
 								<li>
-									<a href="#contact" class="scroll">Contact Us</a>
+									<a href="#contact" class="scroll">Fale Conosco</a>
 								</li>
 							</ul>
 						</div>
