Our_clients: Traduzindo os comentarios

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@ Author URL:
 						<div id="menu" class="menustyles">
 							<ul class="list-unstyled">
 								<li>
-									<a href="index.html">Home</a>
+									<a href="index.html">Início</a>
 								</li>
 								<li>
-									<a href="#about" class="scroll">About</a>
+									<a href="#about" class="scroll">Sobre</a>
 								</li>
 								<li>
-									<a href="#services" class="scroll">Services</a>
+									<a href="#services" class="scroll">Serviços</a>
 								</li>
 								<li>
 									<a href="#team" class="scroll">Nosso Time</a>
 								</li>
 								<li>
-									<a href="#gallery" class="scroll">Gallery</a>
+									<a href="#gallery" class="scroll">Galeria</a>
 								</li>
 								<li>
-									<a href="#testi" class="scroll">Testimonials</a>
+									<a href="#testi" class="scroll">Comentários</a>
 								</li>
 								<li>
 									<a href="#contact" class="scroll">Fale Conosco</a>
@@ -593,7 +593,7 @@ Author URL:
 	<!-- testimonials -->
 	<div class="testimonials py-5" id="testi">
 		<div class="container py-xl-5 py-lg-3">
-			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">what customers says
+			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">O que diz nossos clientes
 				<span></span>
 			</h3>
 			<div class="_testimonials_grids _testimonials_grids">
@@ -604,10 +604,9 @@ Author URL:
 								<img src="images/te1.jpg" class="img-fluid" alt="" />
 							</div>
 							<div class="col-md-7 test-review test-tooltip1">
-								<h6 class="mb-4">Michael Paul</h6>
+								<h6 class="mb-4">Joana Silva</h6>
 								<p class="quotels">
-									<i class="fas fa-quote-left"></i> Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-									sed diam voluptua.
+									<i class="fas fa-quote-left"></i> Fizeram um trabalho excepcional, com certeza irei recomendar para meus amigos. Nota 100!!
 									<i class="fas fa-quote-right"></i>
 								</p>
 								<ul class="list-unstyled mt-4">
@@ -634,10 +633,9 @@ Author URL:
 								<img src="images/te2.jpg" class="img-fluid" alt="" />
 							</div>
 							<div class="col-md-7 test-review test-tooltip1">
-								<h6 class="mb-4">Michael Paul</h6>
+								<h6 class="mb-4">Michele Souza</h6>
 								<p class="quotels">
-									<i class="fas fa-quote-left"></i> Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-									sed diam voluptua.
+									<i class="fas fa-quote-left"></i> Recebi recomendações sobre os serviços deste lava jato, meus amigos tinham razão eles são demais.
 									<i class="fas fa-quote-right"></i>
 								</p>
 								<ul class="list-unstyled mt-4">
@@ -664,10 +662,9 @@ Author URL:
 								<img src="images/te3.jpg" class="img-fluid" alt="" />
 							</div>
 							<div class="col-md-7 test-review test-tooltip1">
-								<h6 class="mb-4">Michael Paul</h6>
+								<h6 class="mb-4">Raíssa Soares</h6>
 								<p class="quotels">
-									<i class="fas fa-quote-left"></i> Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-									sed diam voluptua.
+									<i class="fas fa-quote-left"></i> É a primeira vez que trago meu carro e com certeza não será a última. Estou muito satisfeita com o resultado...
 									<i class="fas fa-quote-right"></i>
 								</p>
 								<ul class="list-unstyled mt-4">
