Foi altero Sobre nós e add um comentario de cliente

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Author URL:
 	<!-- about -->
 	<div class="about py-5" id="about">
 		<div class="container py-xl-5 py-lg-3">
-			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">about us
+			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">Sobre nós 
 				<span></span>
 			</h3>
 			<div class="row mb-5">
@@ -197,17 +197,15 @@ Author URL:
 					</div>
 				</div>
 				<div class="col-lg-5 aboutleft ml-xl-4">
-					<h4 class="about-left-agile text-dark text-capitalize mb-2">about our
-						<span>CAR WASH</span>
+					<h4 class="about-left-agile text-dark text-capitalize mb-2">	
+						<span>Tabajara</span>
 					</h4>
-					<p class="border-left pl-3">Nulla auctor elit augue, eu volutpat risus tincidunt ullamcorper. Su spendisse id ante molestie libero placerat condimentum.
+					<p class="border-left pl-3" style="text-align: justify;"> O lava-jato Tabaraja é especializada em limpeza de automóveis de qualquer porte e tamanho. Nossos profissionais são altamente treinados e capacitados para realizar qualquer tipo de limpeza em seu automóvel. Trabalhamos apenas com produtos de primeira qualidade, visando sempre o lado ecológico. Somos o maior lava-jato de Varginha e realizamos atendimento em toda a região com agendamento de horário marcado, para a sua maior comodidade.
 					</p>
-					<h4 class="about-left-agile text-dark text-capitalize mt-4 mb-2">Bring back your
-						<span>CAR</span> gleaming like
-						<span>NEW</span>!
+					<h4 class="about-left-agile text-dark text-capitalize mt-4 mb-2">Por que nos escolher?
+						
 					</h4>
-					<p>Nulla auctor elit augue, eu volutpat risus tincidunt ullamcorper. Su spendisse id ante molestie libero placerat condimentum.
-						Maecenas in conse quatlibero. Maecenas nisi sapien.</p>
+					<p class="border-left pl-3" style="text-align: justify" > Trabalhamos com qualidade e competência no serviço e na entrega do seu automóvel.</p>
 				</div>
 			</div>
 		</div>
@@ -604,9 +602,9 @@ Author URL:
 								<img src="images/te1.jpg" class="img-fluid" alt="" />
 							</div>
 							<div class="col-md-7 test-review test-tooltip1">
-								<h6 class="mb-4">Joana Silva</h6>
+								<h6 class="mb-4">Breno Cornélio</h6>
 								<p class="quotels">
-									<i class="fas fa-quote-left"></i> Fizeram um trabalho excepcional, com certeza irei recomendar para meus amigos. Nota 100!!
+									<i class="fas fa-quote-left"></i> Atendimento de primeira, fizeram um trabalho excepcional, funcionarios atensiosos e bem treinados, recomendo !!
 									<i class="fas fa-quote-right"></i>
 								</p>
 								<ul class="list-unstyled mt-4">
