Alteracao de servicos

--- a/index.html
+++ b/index.html
@@ -309,18 +309,18 @@ Author URL:
 	<!-- services -->
 	<div class="services py-5" id="services">
 		<div class="container py-xl-5 py-lg-3">
-			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">our services
+			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">nossos serviços
 				<span></span>
 			</h3>
 			<div class="row">
 				<div class="col-md-7">
 					<div class="img1 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_ls px-4">
-							<h4>Hand Wash</h4>
+							<h4>Lavagem à mão</h4>
 							<span> </span>
-							<p class="text-white">Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta, lectus nibh ras ultricies. </p>
+							<p class="text-white"> Realizada manualmente utilizando xampus apropriados de primeira qualidade, com componentes que não afetam o meio ambiente, com um acessório que pode ser um pano, uma esponja ou uma luva de pelos. Auxiliado por uma lavadora móvel de pressão para lançar a água e espuma de lavagem. </p>
 							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
-								Read More
+								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
 						</div>
@@ -329,11 +329,11 @@ Author URL:
 				<div class="col-md-5 px-md-0 my-md-0 mt-3">
 					<div class="img1 img2 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_ls px-3">
-							<h4>Car Glassing</h4>
+							<h4>Limpeza Ecologica</h4>
 							<span> </span>
-							<p class="text-white">Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta. </p>
+							<p class="text-white"> Na Limpeza Ecológica, o produto utilizado é um líquido composto entre outros por cera de carnaúba e 300ml de água.  </p>
 							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
-								Read More
+								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
 						</div>
@@ -344,11 +344,11 @@ Author URL:
 				<div class="col-md-7">
 					<div class="img1 img3 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_ls px-4">
-							<h4>Complete Detail Services</h4>
+							<h4>Limpeza Delivery</h4>
 							<span> </span>
-							<p class="text-white">Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta, lectus nibh ras ultricies. </p>
+							<p class="text-white">Modalidade de limpeza em que o lava-rápido dispõe de um serviço de lavagem a seco que vai ao local escolhido pelo proprietário. Esta modalidade prioriza a conveniência do proprietário e economia de tempo de descolamento. </p>
 							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
-								Read More
+								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
 						</div>
@@ -357,11 +357,11 @@ Author URL:
 				<div class="col-md-5 px-md-0 my-md-0 mt-3">
 					<div class="img1 img4 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_ls px-3">
-							<h4>Perfect Quality</h4>
+							<h4>Enceramento de Pintura</h4>
 							<span> </span>
-							<p class="text-white">Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta. </p>
+							<p class="text-white">Processo de aplicação de cera sobre a pintura do veículo preenche pequenas irregularidades da superfície e forma uma película de proteção. Ajuda a resgatar o brilho da pintura, facilita a remoção de sujeiras durante o processo de lavagem e protege a lataria contra sujeiras do cotidiano por criar uma camada protetora. </p>
 							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
-								Read More
+								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
 						</div>
@@ -372,11 +372,11 @@ Author URL:
 				<div class="col-md-5 my-md-0 mb-3">
 					<div class="img1 img5 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_ls px-3">
-							<h4>Car Inspection</h4>
+							<h4>Lavagem Automatica </h4>
 							<span> </span>
-							<p class="text-white">Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta. </p>
+							<p class="text-white">Realizada inteiramente por máquina, sem a intervenção de pessoas no processo de lavagem. O percorre um túnel de lavagem por uso de esteiras automáticas. É o processo de lavagem mais rápido, durando em geral menos de 5 minutos, o motorista tem a opção de permanecer dentro do veículo. </p>
 							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
-								Read More
+								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
 						</div>
@@ -385,11 +385,11 @@ Author URL:
 				<div class="col-md-7 px-md-0">
 					<div class="img1 img6 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_ls px-4">
-							<h4>Full Service Car Wash</h4>
+							<h4>Serviço completo</h4>
 							<span> </span>
-							<p class="text-white">Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta, lectus nibh ras ultricies. </p>
+							<p class="text-white">Serviço completo que dispõe de lavagem e enceramento do carro. </p>
 							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
-								Read More
+								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
 						</div>
