Traducao de textos

--- a/index.html
+++ b/index.html
@@ -217,17 +217,17 @@ Author URL:
 		<div class="container py-xl-5 py-lg-3">
 			<div class="row py-4 posi-ls-bottom">
 				<div class="col-lg-4 bottom-ls1">
-					<h4 class="text-white mb-4">Trained Professionals</h4>
+					<h4 class="text-white mb-4">Profissionais treinados</h4>
 					<p>Dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
 					<i class="fas fa-users text-white"></i>
 				</div>
 				<div class="col-lg-4 bottom-ls1 my-lg-0 my-5">
-					<h4 class="text-white mb-4">Perfect Quality</h4>
+					<h4 class="text-white mb-4">Ótima qualidade</h4>
 					<p>Dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
 					<i class="fas fa-tachometer-alt text-white"></i>
 				</div>
 				<div class="col-lg-4 bottom-ls1">
-					<h4 class="text-white mb-4">Best Products Used</h4>
+					<h4 class="text-white mb-4">Melhores produtos do mercado</h4>
 					<p>Dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
 					<i class="fas fa-american-sign-language-interpreting text-white"></i>
 				</div>
@@ -239,7 +239,7 @@ Author URL:
 	<!-- gallery -->
 	<div class="agileits-services text-center py-5" id="gallery">
 		<div class="container py-xl-5 py-lg-3">
-			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">Our Gallery
+			<h3 class="title text-capitalize text-dark text-center pb-3 mb-sm-5 mb-4">GALERIA
 				<span></span>
 			</h3>
 			<div class="ls_gallery_grids">
