--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ Author URL:
 					<div class="col-xl-10 col-md-9 col-sm-8 col-6 logo">
 						<h1>
 							<a href="index.html">
-								<span>C</span>ar
-								<span>S</span>ervices
+								<span>T</span>aba
+								<span>J</span>ara
 							</a>
 						</h1>
 					</div>
@@ -103,10 +103,10 @@ Author URL:
 							<div class="container">
 								<div class="banner-info">
 									<h3 class="name text-white text-uppercase text-center">
-										<span class="name-part l-text1">your</span>
-										<span class="name-part l-text2">car</span>
-										<span class="name-part l-text3">is always in great hands
-											<label>with</label> us</span>
+										<span class="name-part l-text1">Seu</span>
+										<span class="name-part l-text2">carro</span>
+										<span class="name-part l-text3">está
+											<label>sempre</label> em boas mãos</span>
 									</h3>
 								</div>
 							</div>
@@ -117,10 +117,10 @@ Author URL:
 							<div class="container">
 								<div class="banner-info">
 									<h3 class="name text-white text-uppercase text-center">
-										<span class="name-part l-text1">we</span>
-										<span class="name-part l-text2">love</span>
-										<span class="name-part l-text3">your
-											<label>car</label> the same as you do</span>
+										<span class="name-part l-text1">Nós</span>
+										<span class="name-part l-text2">amamos</span>
+										<span class="name-part l-text3">seu
+											<label>carro</label> da mesma forma que você</span>
 									</h3>
 								</div>
 							</div>
@@ -788,8 +788,8 @@ Author URL:
 			</div>
 			<!-- social icons -->
 			<!-- copyright -->
-			<p class="copyright-ls"> &copy; 2018 Car Services. All Rights Reserved | Design by
-				<a href="http://google.com/"> Lava Jato</a>
+			<p class="copyright-ls"> &copy; 2019 Lava Jato. Todos direitos reservados | Design by
+				<a href="http://google.com/"> Taba Jara</a>
 			</p>
 			<!-- //copyright -->
 		</div>
