--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@ Author URL:
 	<meta charset="UTF-8" />
 	<meta name="keywords" content="Car Services Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
 	/>
-	<script>
-		addEventListener("load", function () {
-			setTimeout(hideURLbar, 0);
-		}, false);
+	<!-- <script>
+		// addEventListener("load", function () {
+		// 	setTimeout(hideURLbar, 0);
+		// }, false);
 
-		function hideURLbar() {
-			window.scrollTo(0, 1);
-		}
-	</script>
+		// function hideURLbar() {
+		// 	window.scrollTo(0, 1);
+		// }
+	</script> -->
 	<!--// Meta tag Keywords -->
 
 	<!-- Custom-Files -->
@@ -217,18 +217,18 @@ Author URL:
 		<div class="container py-xl-5 py-lg-3">
 			<div class="row py-4 posi-ls-bottom">
 				<div class="col-lg-4 bottom-ls1">
-					<h4 class="text-white mb-4">Profissionais treinados</h4>
-					<p>Dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+					<h4 class="text-white mb-4">Equipe treinada</h4>
+					<p>Profissionais capacitados para trazer excelência ao serviço.</p>
 					<i class="fas fa-users text-white"></i>
 				</div>
 				<div class="col-lg-4 bottom-ls1 my-lg-0 my-5">
 					<h4 class="text-white mb-4">Ótima qualidade</h4>
-					<p>Dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+					<p> Garantimos a qualidade dos serviços prestados e o atendimento personalizado.</p>
 					<i class="fas fa-tachometer-alt text-white"></i>
 				</div>
 				<div class="col-lg-4 bottom-ls1">
-					<h4 class="text-white mb-4">Melhores produtos do mercado</h4>
-					<p>Dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+					<h4 class="text-white mb-4">Excelentes produtos</h4>
+					<p>Melhores produtos disponíveis no mercado.</p>
 					<i class="fas fa-american-sign-language-interpreting text-white"></i>
 				</div>
 			</div>
@@ -359,7 +359,7 @@ Author URL:
 						<div class="img_text_ls px-3">
 							<h4>Enceramento de Pintura</h4>
 							<span> </span>
-							<p class="text-white">Processo de aplicação de cera sobre a pintura do veículo preenche pequenas irregularidades da superfície e forma uma película de proteção. Ajuda a resgatar o brilho da pintura, facilita a remoção de sujeiras durante o processo de lavagem e protege a lataria contra sujeiras do cotidiano por criar uma camada protetora. </p>
+							<p class="text-white">Processo de aplicação de cera sobre a pintura que preenche pequenas irregularidades da superfície e forma uma película de proteção. Resgatar o brilho da pintura, facilita a remoção de sujeiras e protege a lataria contra sujeiras do cotidiano. </p>
 							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
 								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
