--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@ Author URL:
 									<h3 class="name text-white text-uppercase text-center">
 										<span class="name-part l-text1">Seu</span>
 										<span class="name-part l-text2">carro</span>
-										<span class="name-part l-text3">está
 											<label>sempre</label> em boas mãos</span>
 									</h3>
 								</div>
@@ -131,10 +130,10 @@ Author URL:
 							<div class="container">
 								<div class="banner-info">
 									<h3 class="name text-white text-uppercase text-center">
-										<span class="name-part l-text1">your</span>
-										<span class="name-part l-text2">car</span>
-										<span class="name-part l-text3">is
-											<label>always</label> in great hands with us</span>
+										<span class="name-part l-text1">Encontre</span>
+										<span class="name-part l-text2">os</span>
+										<span class="name-part l-text3">melhores serviços para o seu 
+											<label>carro</label> </span>
 									</h3>
 								</div>
 							</div>
@@ -145,10 +144,10 @@ Author URL:
 							<div class="container">
 								<div class="banner-info">
 									<h3 class="name text-white text-uppercase text-center">
-										<span class="name-part l-text1">we</span>
-										<span class="name-part l-text2">love</span>
-										<span class="name-part l-text3">your car the same as
-											<label>you</label> do</span>
+										<span class="name-part l-text1">Encontre</span>
+										<span class="name-part l-text2">os</span>
+										<span class="name-part l-text3">melhore serviços para o seu 
+											<label>carro</label> </span>
 									</h3>
 								</div>
 							</div>
