Comentário modal login para a turma

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Author URL:
 <body>
 	<!-- banner & header section -->
 	<div class="main">
+		<!-- Modal Login -->
 		<div class="modal fade" role="dialog" id="loginWeb">
 			<div class="modal-dialog">
 					<div class="modal-content">
@@ -73,7 +74,8 @@ Author URL:
 					</div>
 				</div>
 		</div>
-		
+		<!-- //Modal Login -->
+
 		<!-- header -->
 		<header>
 			<div class="container-fluid">
