Adicionando caminho e modificação detalhes Contact

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Author URL:
 									<a href="index.html">Início</a>
 								</li>
 								<li>
-									<a href="#loginWeb" class="scroll">Sobre</a>
+									<a href="#about" class="scroll">Sobre</a>
 								</li>
 								<li>
 									<a href="#services" class="scroll">Serviços</a>
@@ -785,8 +785,8 @@ Author URL:
 			<div class="logo2">
 				<h2>
 					<a href="index.html">
-						<span>C</span>ar
-						<span>S</span>ervices
+						<span>T</span>aba
+						<span>J</span>ara
 					</a>
 				</h2>
 			</div>
