Alteração de fotos

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ Author URL:
 					<img src="images/team2.jpg" class="img-fluid img-thumbnail" alt="">
 					<div class="caption">
 						<div class="team-text">
-							<h4>Carol</h4>
+							<h4>Luis</h4>
 						</div>
 						<ul>
 							<li>
@@ -514,7 +514,7 @@ Author URL:
 					<img src="images/team4.jpg" class="img-fluid img-thumbnail" alt="">
 					<div class="caption">
 						<div class="team-text">
-							<h4>Julia</h4>
+							<h4>Camilo</h4>
 						</div>
 						<ul>
 							<li>
@@ -541,7 +541,7 @@ Author URL:
 					<img src="images/team3.jpg" class="img-fluid img-thumbnail" alt="">
 					<div class="caption">
 						<div class="team-text">
-							<h4>Sonia</h4>
+							<h4>Renan</h4>
 						</div>
 						<ul>
 							<li>
@@ -591,7 +591,7 @@ Author URL:
 					<img src="images/team6.jpg" class="img-fluid img-thumbnail" alt="">
 					<div class="caption">
 						<div class="team-text">
-							<h4>Monica</h4>
+							<h4>Regis</h4>
 						</div>
 						<ul>
 							<li>
